Fix an overflow issue

--- a/less/app.less
+++ b/less/app.less
@@ -21,6 +21,10 @@ body {
 .intro-wrapper {
     position: relative;
 
+    * {
+        box-sizing: border-box;
+    }
+
     .bg-img {
         width: 100%;
         height: 100vh;
